<resources>
    <string name="app_version">2.3.1</string>
    <string name="proj_name">ShareSDK</string>
    <string name="hello">Hello World, CLXActivity!</string>
    <string name="app_name">常联系</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="dialogTxt">加载中</string>
    <string name="company_name">天津驯鹿科技有限公司</string>
    <string name="copyright">Copyright 2014</string>
    <string name="corporation">Xun.lu Corporation Tianjin</string>
    <string name="all_rigth_reserved">All Right Reserved</string>
    <string name="from_mobile">从手机通讯录添加</string>
    <string name="enter_information">输入联系人信息</string>
    <string name="physical_import">纸质通讯录导入</string>
    <string name="excel_import">Excel电子表格通讯录导入</string>
    <string name="invitation">邀请</string>
    <string name="name">姓名：</string>
    <string name="leave_opinion">请留下您宝贵的意见</string>
    <string name="now_password">当前密码：</string>
    <string name="new_passwrod">新密码：</string>
    <string name="circle_icon">圈子图标："</string>
    <string name="circle_icon2">圈子图标</string>
    <string name="circle_describe2">圈子描述</string>
    <string name="circle_name">圈子名称：</string>
    <string name="circle_name2">圈子名称</string>
    <string name="circle_describe">圈子简介：</string>
    <string name="circle_member">圈子成员：</string>
    <string name="save_circle_message">保存圈子信息</string>
    <string name="member">成员</string>
    <string name="growth">成长</string>
    <string name="dynamic">动态</string>
    <string name="edit">编辑</string>
    <string name="setName">设置姓名</string>
    <string name="delete">删除</string>
    <string name="reply">回复</string>
    <string name="input_circleName">输入圈子名称</string>
    <string name="noGrowth">本圈子还没有成长记录，点击右上角相机图标发一条吧。</string>
    <string name="five_message">5条消息</string>
    <string name="hello_honey">亲爱的您好：</string>
    <string name="welcome">欢迎使用常联系，您还没有验证手机号码，验证后可以在常联系中添加好友.</string>
    <string name="mobile_prefix">+86</string>
    <string name="mobile">手机：</string>
    <string name="mobile_num">手机号</string>
    <string name="skip_verify">跳过验证</string>
    <string name="mobile_num_verify">手机号验证</string>
    <string name="auth_code_finish">我们已经向您的手机发送验证码</string>
    <string name="content_comment">请输入评论内容</string>
    <string name="input_auth_code">请输入验证码</string>
    <string name="input_your_phoneNum">请输入您的手机号码</string>
    <string name="input_phoneNum">请输入手机号码</string>
    <string name="verify_complete">完成验证</string>
    <string name="again_auth_code">重新获取验证码</string>
    <string name="send_verify_message">发送12114验证短信</string>
    <string name="send_clx_message">*如果不能收到验证码，您可以发送短信内容“常联系”到12114，一步完成验证，短信由运营商按普通短信计费。</string>
    <string name="new_dynamic">24条新动态</string>
    <string name="about_me">与我有关</string>
    <string name="about_dentification">认证相关</string>
    <string name="all">全部</string>
    <string name="accept_invitation">您邀请了3位好友加入常联系圈子，通知他们接受邀请吧！</string>
    <string name="batch_remind">批量提醒</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_login">其他方式登录</string>
    <string name="regist_new_user">注册新用户</string>
    <string name="photo_album">相册</string>
    <string name="submit">提交</string>
    <string name="determine">确定</string>
    <string name="complete">完成</string>
    <string name="verify">验证</string>
    <string name="share">分享</string>
    <string name="change">更改</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="release">发布</string>
    <string name="send">发送</string>
    <string name="private_message">私信</string>
    <string name="no_private_message">还没有人给您发送私信消息，赶紧找您的圈中好友私聊吧。</string>
    <string name="no_dynamic">亲，成为认证成员后才能查看所有动态</string>
    <string name="in_circle">下面的个人信息资料包括您的个人名片以及邀请人在本圈子中给您预设的信息,请选择您打算在本圈子中公开的信息：</string>
    <string name="creat_success">恭喜您，账号创建成功!</string>
    <string name="input_name">输入您的姓名</string>
    <string name="input_trueName">请输入您的真实姓名</string>
    <string name="set_login_password">请设置您的登录密码</string>
    <string name="register_complete">完成注册</string>
    <string name="begin_use">开始使用</string>
    <string name="record_growth">记录圈子珍贵的记忆</string>
    <string name="happen_time">发生时间：</string>
    <string name="happen_place">发生地点：</string>
    <string name="share_to">分享到</string>
    <string name="send_by_mobile">通过手机短信发送</string>
    <string name="message_show">邀请短信预览</string>
    <string name="take_photo">拍照</string>
    <string name="from_photo_album">从相册选择</string>
    <string name="is_delete">是否删除这张照片？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="expression">表情</string>
    <string name="picture">图片</string>
    <string name="text">文本</string>
    <string name="next">下一步</string>
    <string name="set_password_again">重新设置您的登录密码</string>
    <string name="input_password">请输入密码</string>
    <string name="loading">加载中...</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="last_refresh">上次更新</string>
    <string name="search_member">搜索成员</string>
    <string name="circle">圈子</string>
    <string name="input_content">输入内容</string>
    <string name="nickname">昵称</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="to">至</string>
    <string name="remind_him">邀请TA</string>
    <string name="join_circle">加入圈子</string>
    <string name="ignore_invitation">忽略邀请</string>
    <string name="basic_information">基本信息</string>
    <string name="contact_way">联系方式</string>
    <string name="social_number">社交账号</string>
    <string name="address">通讯地址</string>
    <string name="address_information">地址信息</string>
    <string name="contact_number">联系电话</string>
    <string name="email_address">电子邮箱</string>
    <string name="education_experience">教育经历</string>
    <string name="work_experience">工作经历</string>
    <string name="setting_in_circle">您也可以在圈子中设置这些权限</string>
    <string name="public_in_circle">在圈子中你可以公开以下信息：</string>
    <string name="card_change">有人修改了您的名片信息</string>
    <string name="i_agree">我同意</string>
    <string name="ignore">忽略</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="change_password">修改密码</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="about_clx">关于常联系</string>
    <string name="common_problem">常见问题</string>
    <string name="software_license">软件许可及服务协议</string>
    <string name="log_out">退出登录</string>
    <string name="my_pictures">我的照片</string>
    <string name="addressee">收信人:</string>
    <string name="loading_more">加载更多</string>
    <string name="change_nickname">更改昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="location_address">所在地通讯地址</string>
    <string name="other_information">其他资料</string>
    <string name="edit_username">编辑用户姓名</string>
    <string name="contact_phone">联系电话</string>
    <string name="send_private_letter">发私信</string>
    <string name="call_up">打电话</string>
    <string name="already_identification">已认证</string>
    <string name="verify_register_message">验证注册短信</string>
    <string name="sms_content">%1$s,好久不联系！【%2$s】自动更新的永久通讯录：http://xun.lu/%3$s ,请分享给大家。</string>
    <string name="sms_warn_content">%1$s，快点击 http://xun.lu/%2$s  加入咱们【%3$s】的圈子，现在已经有%4$s%5$s人加入，还有很多大家一起成长、聚会的老照片！就差你了，快~</string>
    <string name="more">更多</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="share_to_wechat">微信好友</string>
    <string name="share_to_moment">微信朋友圈</string>
    <string name="share_to_favorite">微信收藏</string>
    <string name="wechat_demo_title">微信分享Demo标题</string>
    <string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color="red">轻松分享,</font><font color="green">快乐生活。</font><a href="http://connect.qq.com">详情请看。</a><img src="http://imgcache.qq.com/ptlogin/head/1_100.gif"></img></string>
    <string name="wechat_client_is_not_installed_correctly">微信客户端未安装或版本太旧</string>
    <string name="wechat_client_not_support_following_operation">微信客户端不支持第三方应用执行关注功能</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_accept_invite_permission">AcceptInvitePermissionActivity</string>
    <string name="title_activity_edit_login">EditLoginActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_user_info_edit_activity1">UserInfoEditActivity1</string>
    <string name="title_activity_my_card_edit_activity1">MyCardEditActivity1</string>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="title_activity_growth_activity1">GrowthActivity1</string>
    <string name="title_activity_alum_month">AlumMonthActivity</string>
    <string name="title_activity_alum_day">AlumDayActivity</string>
    <string name="title_activity_release_growth_image_pager">ReleaseGrowthImagePagerActivity</string>
    <string name="title_activity_growth_image_pager">GrowthImagePagerActivity</string>
    <string name="title_activity_alum_year">AlumYearActivity</string>
    <string name="title_activity_seting_public_infomation">SetingPublicInfomationActivity</string>
    <string name="title_activity_synchronize_self_info">SynchronizeSelfInfoActivity</string>
    <string name="title_activity_synchronize_other_circle">SynchronizeOtherCircleActivity</string>
    <string name="title_activity_avatar_image_pager">AvatarImagePagerActivity</string>
    <string name="title_activity_set_public_info_show_info">SetPublicInfoShowInfoActivity</string>
    <string name="title_activity_syncchronous_information_activity1">SyncchronousInformationActivity1</string>
    <string name="title_activity_no_exist_person_info">NoExistPersonInfoActivity</string>
    <string name="title_activity_select_share_image">SelectShareImageActivity</string>
    <string name="title_activity_release_growth_activity1">ReleaseGrowthActivity1</string>
    <string name="title_activity_public_message">PublicMessageActivity</string>
    <string name="title_activity_select_contacts_activity1">SelectContactsActivity1</string>
    <string name="title_activity_user_info_activity1">UserInfoActivity1</string>
    <string name="title_activity_email_register">EmailRegisterActivity</string>
    <string name="title_activity_email_find_password">EmailFindPasswordActivity</string>
    <string name="title_activity_circle_guide">CircleGuideActivity</string>
    <string name="title_activity_main_tab_activity1">MainTabActivity1</string>
    <string name="title_activity_login_activity1">LoginActivity1</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_activity1">RegisterActivity1</string>
    <string name="title_activity_find_paswrod">FindPaswrodActivity</string>
    <string name="title_activity_find_password_activity1">FindPasswordActivity1</string>
    <string name="title_activity_circle_home">CircleHomeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_circle_home_search">CircleHomeSearchActivity</string>
    <string name="title_activity_add_circle_member_activity1">AddCircleMemberActivity1</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_activity_my_card">MyCardActivity</string>
    <string name="title_activity_edit_circle_activity1">EditCircleActivity1</string>
    <string name="title_activity_circle_group">CircleGroupActivity</string>
    <string name="title_activity_input_circle_group_name">InputCircleGroupNameActivity</string>
</resources>