<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/scale110dip"
        android:background="@drawable/top_bg"
        android:gravity="center"
        android:text="设置用户姓名"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/scale42sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dip"
        android:gravity="center"
        android:shadowColor="#ffffff"
        android:shadowDx="0.6"
        android:shadowDy="0.6"
        android:shadowRadius="0.5"
        android:text="@string/creat_success"
        android:textColor="#5F6761"
        android:textSize="@dimen/scale36sp" />

    <EditText
        android:id="@+id/editNC"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scale129dip"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/input_top_radius"
        android:hint="@string/input_name"
        android:paddingLeft="15dip"
        android:textSize="20sp" />

    <Button
        android:id="@+id/startUse"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/scale129dip"
        android:layout_below="@+id/editNC"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/bor_radius_bottom"
        android:text="@string/begin_use"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>