<com.changlianxi.view.InputMethodRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_wrap_bg" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/layInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/scale125dip"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scale34dip"
                android:layout_marginRight="@dimen/scale34dip"
                android:layout_marginTop="@dimen/scale106dip"
                android:gravity="center"
                android:orientation="vertical" >

                <com.changlianxi.view.SearchEditText
                    android:id="@+id/edtNum"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/scale129dip"
                    android:background="@drawable/input_top_radius"
                    android:gravity="center_vertical"
                    android:hint="@string/mobile_num"
                    android:maxLength="13"
                    android:paddingLeft="@dimen/scale44dip"
                    android:paddingRight="15dip"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#66000000"
                    android:textSize="@dimen/scale40sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:background="#ffe0e0e0" />

                <com.changlianxi.view.SearchEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dip"
                    android:background="@drawable/input"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:paddingLeft="@dimen/scale44dip"
                    android:paddingRight="15dip"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#66000000"
                    android:textSize="@dimen/scale40sp" >
                </com.changlianxi.view.SearchEditText>

                <Button
                    android:id="@+id/btlogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/scale129dip"
                    android:layout_marginLeft="-1dip"
                    android:layout_marginRight="-1dip"
                    android:background="@drawable/bor_radius_bottom"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/scale46sp" />
            </LinearLayout>

            <Button
                android:id="@+id/findpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layInput"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dip"
                android:background="@null"
                android:text="@string/forget_password"
                android:textColor="#9d9b90"
                android:textSize="@dimen/scale36sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/scale34dip"
        android:layout_marginRight="@dimen/scale34dip" >

        <Button
            android:id="@+id/qita"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/scale97dip"
            android:layout_marginBottom="20dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="@drawable/btn_tran51"
            android:text="@string/other_login"
            android:textColor="#ffffff"
            android:textSize="@dimen/scale36sp" />

        <Button
            android:id="@+id/btregister"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/scale97dip"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/btn_tran13"
            android:text="@string/regist_new_user"
            android:textColor="#ffffff"
            android:textSize="@dimen/scale36sp" />
    </LinearLayout>

</com.changlianxi.view.InputMethodRelativeLayout>