<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/scale228dip"
        android:gravity="center"
        android:shadowColor="#ffffff"
        android:shadowDx="0.6"
        android:shadowDy="0.6"
        android:shadowRadius="0.5"
        android:text="@string/set_password_again"
        android:textColor="#5F6761"
        android:textSize="@dimen/scale36sp" />

    <com.changlianxi.view.SearchEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scale129dip"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="@dimen/scale34dip"
        android:layout_marginRight="@dimen/scale34dip"
        android:layout_marginTop="@dimen/scale52dip"
        android:background="@drawable/input_top_radius"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/scale44dip"
        android:paddingRight="15dip"
        android:password="true"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="#B8B8B8"
        android:textSize="@dimen/scale46sp" >

        <requestFocus />
    </com.changlianxi.view.SearchEditText>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_below="@+id/editPassword"
        android:layout_marginLeft="@dimen/scale36dip"
        android:layout_marginRight="@dimen/scale36dip"
        android:background="#ffe0e0e0" />

    <Button
        android:id="@+id/btfinish"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/scale129dip"
        android:layout_below="@+id/line"
        android:layout_marginLeft="@dimen/scale36dip"
        android:layout_marginRight="@dimen/scale36dip"
        android:background="@drawable/bor_radius_bottom"
        android:singleLine="true"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="@dimen/scale46sp" />

</RelativeLayout>